# blog_event-driven-svcs

./: main.py  pyproject.toml
projects/app-svc/: main.py  pyproject.toml
projects/auth-svc/: main.py  pyproject.toml
projects/cli-proj/: main.py  pyproject.toml
projects/gui-proj/: constants.py  consumer.py  jest.config.js  main.py  package.json  pyproject.toml  ui.py
projects/gui-proj/tests/code/: test_constants.py  test_consumer.py  test_integration.py  test_main.py  test_signals.py  test_ui.py
projects/gui-proj/tests/ui/: components.test.ts  e2e.test.ts  lifecycle.test.ts
projects/lib-one/: pyproject.toml
projects/lib-one/src/lib_one/: __init__.py
projects/lib-two/: pyproject.toml
projects/lib-two/src/lib_two/: __init__.py
