[project]
name = "lib-two"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "rkohler", email = "roger.kohlerjr@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "lib-one",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
lib-one = { workspace = true }
